# DevilChain

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
ai/: Dockerfile  api.py  guard.py  node.py  requirements.txt
bridge/: Cargo.toml  Dockerfile  requirements.txt
bridge/src/: lib.rs  main.py
chat/: Dockerfile  package.json
chat/app/: page.tsx
contracts/: DevilBridge.sol  DevilCoin.sol  DevilDAO.sol  DevilID.sol  DevilNFT.sol  DevilStaking.sol  DevilStorage.sol  hardhat.config.js  package.json
contracts/scripts/: deploy.js
contracts/test/: DevilCoin.test.js  DevilDAO.test.js  DevilID.test.js  DevilStaking.test.js  DevilStorage.test.js
contracts/tests/: DevilBridge.test.js  DevilCoin.test.js  DevilID.test.js  DevilStaking.test.js  DevilStorage.test.js
core/: Cargo.toml  Dockerfile  Dockerfile.miner
core/src/: main.rs  tokenomics.rs
core/src/ai/: mod.rs
core/src/api/: mod.rs
core/src/blockchain/: mod.rs
core/src/consensus/: mod.rs
core/src/dao/: mod.rs
core/src/graphql/: mod.rs
core/src/mempool/: mod.rs
core/src/mining/: mod.rs
core/src/network/: mod.rs
core/src/storage/: mod.rs
core/src/validator/: mod.rs
core/src/wallet/: mod.rs
docker/: .env  Dockerfile.ai  Dockerfile.bridge  Dockerfile.chat  Dockerfile.core  Dockerfile.explorer  Dockerfile.social  Dockerfile.storage  Dockerfile.tester  README.md  deploy.sh  docker-compose.yml  quick_test.sh  start.sh
docker/sql/: init.sql
docker/tests/: conftest.py  generate_coin.py  generate_wallets.py  pytest.ini  test_blockchain.py  test_wallet.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOY.md  DOCKER.md  NODES.md  ROADMAP.md  SECURITY.md  SETUP.md  TESTING.md  WHITEPAPER.md  burn-liquidity-rules.md  fee-schedule.md
explorer/: Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.json
explorer/app/: globals.css  layout.tsx  page.tsx
explorer/app/coin/: page.tsx
explorer/app/validators/: page.tsx
identity/: Cargo.toml
identity/src/: lib.rs
scripts/: deploy_contracts.sh  setup_node.sh  testnet_genesis.sh
sdk/js/: index.js
sdk/kotlin/: DevilChainSDK.kt
sdk/python/: devilchain_sdk.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/swift/: DevilChainSDK.swift
social/: Dockerfile  package.json
social/app/: page.tsx
storage/: Cargo.toml  Dockerfile
storage/src/: lib.rs  main.rs
wallet/: pubspec.yaml
wallet/lib/: main.dart
wallet/lib/providers/: chain_provider.dart  wallet_provider.dart
wallet/lib/screens/: chat_screen.dart  dao_screen.dart  (+6 more)
(+6 files in other folders)
