[package]
name = "devilchain-node"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "devilchain-node"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sha2        = "0.10"
hex         = "0.4"
rand        = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
axum        = "0.7"
async-graphql = "7"
async-graphql-axum = "7"
tower       = "0.4"
tower-http  = { version = "0.5", features = ["cors"] }
reqwest     = { version = "0.12", features = ["json"] }
env_logger  = "0.11"
log         = "0.4"
sled        = "0.34"
# libp2p for full P2P (phase 2)
# libp2p = { version = "0.53", features = ["gossipsub", "mdns", "tcp", "noise", "yamux"] }

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
panic       = "abort"
strip       = true
