[package]
name = "devil-storage"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "DevilStorage - Decentralized file storage node for DevilChain"

[[bin]]
name = "devil-storage-node"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
